# auth

./: .coveragerc  .gitignore  Dockerfile  README.md  deployment.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  service.yml  uwsgi.ini
.github/workflows/: google.yml  python-app.yml
auth/: serializers.py  settings.py  tests.py  urls.py  viewsets.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
