[project]
name = "auth-django"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "psycopg2>=2.9.12",
    "uwsgi>=2.0.29",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv"]
