[project]
name = "auth-django"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.16",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.30.0",
    "psycopg2>=2.9.12",
    "uwsgi>=2.0.29",
]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "pre-commit>=4.6.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv"]
